[SPV2] Add the device scale factor to the root transform node

This patch sets the device scale factor on cc's root transform node,
fixing several layout tests. This approach is different from how
cc builds property trees (see post_local_scale_factor in
property_tree_builder's AddTransformNodeIfNeeded) where a post_local
transform is used, but aligns closer to blink's approach of using a
single transform per transform node.

This approach is temporary and will need to be refactored when we
begin supporting viewport transforms such as pinch-zoom.

BUG=642240
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2318933006
Cr-Commit-Position: refs/heads/master@{#417394}

Former-commit-id: 73249085cf0d583b3267d500e3a48aaf514596c7